--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,22 @@
 version: "3"
 
 services:
-  elasticsearch:
-    image: elasticsearch:7.6.1
+  fuzzy-quiz:
+    image: node:lts-alpine
     ports:
-      - 9200:9200
-      - 9300:9300
-    environment:
-      - discovery.type=single-node
+      - 8080:8080
+    volumes:
+      - .:/app
+    working_dir: /app
+    entrypoint: "npm"
+    command: ["run", "watch"]
+  #   depends_on: 
+  #     - elasticsearch
+
+  # elasticsearch:
+  #   image: elasticsearch:7.6.1
+  #   ports:
+  #     - 9200:9200
+  #     - 9300:9300
+  #   environment:
+  #     - discovery.type=single-node
