--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "tslint -p tsconfig.json",
     "build": "tsc",
     "start": "node dist/server.js",
+    "debug": "node --inspect=0.0.0.0:9229 dist/server.js",
     "watch": "nodemon"
   },
   "repository": {
@@ -21,6 +22,8 @@
   },
   "homepage": "https://github.com/humanier/fuzzy-quiz#readme",
   "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
